Created menu actions

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drawerLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity"
     android:background="@drawable/gradient_background">
 
-    <ImageView
-        android:id="@+id/ivMenu"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:src="@drawable/ic_menu" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginBottom="30dp"
-        android:contentDescription="@string/logo_accessibility"
-        android:src="@drawable/logo" />
-
     <LinearLayout
-        android:id="@+id/llRead"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="60dp"
-        android:paddingVertical="10dp"
-        android:gravity="center"
-        android:background="@drawable/rounded_button">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_white"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:text="@string/read">
-        </TextView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llGenerate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="60dp"
-        android:layout_marginTop="20dp"
-        android:paddingVertical="10dp"
-        android:gravity="center"
-        android:background="@drawable/rounded_button">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_white"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:text="@string/generate">
-        </TextView>
-
-    </LinearLayout>
-
-    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="bottom">
+        android:orientation="vertical">
 
-        <TextView
+        <ImageView
+            android:id="@+id/ivMenu"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_menu" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginBottom="30dp"
+            android:contentDescription="@string/logo_accessibility"
+            android:src="@drawable/logo" />
+
+        <LinearLayout
+            android:id="@+id/llRead"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="60dp"
+            android:paddingVertical="10dp"
+            android:gravity="center"
+            android:background="@drawable/rounded_button">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:text="@string/read">
+            </TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llGenerate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="60dp"
+            android:layout_marginTop="20dp"
+            android:paddingVertical="10dp"
+            android:gravity="center"
+            android:background="@drawable/rounded_button">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:text="@string/generate">
+            </TextView>
+
+        </LinearLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:textSize="@dimen/developer"
-            android:textColor="@color/developer"
-            android:text="@string/developed_by"
-            android:gravity="center_horizontal|bottom"
-            android:layout_marginBottom="20dp"/>
+            android:layout_gravity="bottom">
 
-    </FrameLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="@dimen/developer"
+                android:textColor="@color/developer"
+                android:text="@string/developed_by"
+                android:gravity="center_horizontal|bottom"
+                android:layout_marginBottom="20dp"/>
 
+        </FrameLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:headerLayout="@layout/header_navigation_drawer"
+        app:menu="@menu/activity_main_drawer"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
