--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="text_grey">#BABABA</color>
     <color name="text_white">#FFFFFF</color>
 
+    <color name="card_white">#FFFFFF</color>
+
     <color name="button_dark">#303030</color>
 
     <color name="developer">#064232</color>
