--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="text_white">#FFFFFF</color>
 
     <color name="card_white">#FFFFFF</color>
+    <color name="background_grey">#BABABA</color>
 
     <color name="button_dark">#303030</color>
 
