--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -10,11 +10,11 @@
     android:background="@drawable/gradient_background">
 
     <ImageView
-        android:id="@+id/ivMenu"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:layout_marginStart="10dp"
-    android:src="@drawable/ic_back" />
+        android:id="@+id/ivBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_return" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,9 +34,11 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/etQRCodeContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="3"
+            android:imeOptions="actionDone"
             android:hint="Type the content that you want to appear without QR Code..."/>
 
     </LinearLayout>
@@ -65,18 +67,20 @@
         android:id="@+id/llResult"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="top|center"
         android:layout_marginHorizontal="20dp"
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:padding="10dp"
             android:layout_marginVertical="20dp"
-            android:padding="20dp"
             android:background="@drawable/rounded_card" >
 
             <ImageView
+                android:id="@+id/ivQRCodeGenerated"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_qr_code" />
