--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="50dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/ic_menu" />
+            android:src="@drawable/ic_menu_drawer" />
 
         <ImageView
             android:layout_width="match_parent"
