--- a/app/src/main/res/layout/activity_read_and_generated_qr_codes.xml
+++ b/app/src/main/res/layout/activity_read_and_generated_qr_codes.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,11 +9,11 @@
     android:background="@drawable/gradient_background">
 
     <ImageView
-        android:id="@+id/ivMenu"
+        android:id="@+id/ivBack"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
-        android:src="@drawable/ic_back" />
+        android:src="@drawable/ic_return" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,15 +27,17 @@
         tools:ignore="UselessParent">
 
         <TextView
+            android:id="@+id/tvSavedTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="QR Codes Generated"
             android:textColor="@color/text_dark"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSavedQRCodes"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
