--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:src="@drawable/ic_back" />
+        android:src="@drawable/ic_return" />
 
     <ImageView
         android:layout_width="match_parent"
