--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GenerateActivity"
+    tools:context=".activity.GenerateActivity"
     android:background="@drawable/gradient_background">
 
     <ImageView
@@ -39,7 +37,9 @@
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:imeOptions="actionDone"
-            android:hint="Type the content that you want to appear without QR Code..."/>
+            android:hint="@string/type_the_content"
+            android:autofillHints=""
+            android:inputType="text" />
 
     </LinearLayout>
 
@@ -94,39 +94,13 @@
             android:baselineAligned="false">
 
             <LinearLayout
-                android:id="@+id/llSave"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center"
-                tools:ignore="UseCompoundDrawables">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_save"
-                    android:background="@drawable/round_button" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/save"
-                    android:textColor="@color/text_white"
-                    android:textAlignment="center"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
-
-            <LinearLayout
                 android:id="@+id/llShare"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:gravity="center"
-                tools:ignore="UseCompoundDrawables">
+                tools:ignore="UseCompoundDrawables,UselessParent">
 
                 <ImageView
                     android:layout_width="wrap_content"
