--- a/app/src/main/res/layout/activity_read_and_generated_qr_codes.xml
+++ b/app/src/main/res/layout/activity_read_and_generated_qr_codes.xml
@@ -5,15 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ReadAndGeneratedQRCodes"
+    tools:context=".activity.ReadAndGeneratedQRCodesActivity"
     android:background="@drawable/gradient_background">
 
-    <ImageView
-        android:id="@+id/ivBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:src="@drawable/ic_return" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_return" />
+
+        <TextView
+            android:id="@+id/tvSavedTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="start|center"
+            android:text="@string/qr_codes_generated"
+            android:textColor="@color/text_dark"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,19 +41,9 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
-        android:padding="20dp"
+        android:padding="10dp"
         android:background="@drawable/rounded_card"
         tools:ignore="UselessParent">
-
-        <TextView
-            android:id="@+id/tvSavedTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="QR Codes Generated"
-            android:textColor="@color/text_dark"
-            android:textSize="25sp"
-            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSavedQRCodes"
