Implementation of multilanguage for English, Portuguese and Spanish and made the sound configuration.

--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -39,7 +39,7 @@
             android:imeOptions="actionDone"
             android:hint="@string/type_the_content"
             android:autofillHints=""
-            android:inputType="text" />
+            android:inputType="none" />
 
     </LinearLayout>
 
