--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,8 +19,7 @@
 
     <group
         android:id="@+id/group_configuration"
-        android:checkableBehavior="single"
-        android:visible="false" >
+        android:checkableBehavior="single" >
         <item
             android:id="@+id/nav_configuration"
             android:icon="@drawable/ic_configuration"
